<resources>
    <string name="app_name">Exercise2</string>
    <string name="wide_movie_poster">Wide movie poster</string>
    <string name="avengers_endgame">Avengers: Endgame</string>
    <string name="movie_poster">Movie poster</string>
    <string name="title">Avengers: Endgame</string>
    <string name="released">Released:</string>
    <string name="release_date">April 22, 2019</string>
    <string name="movie_trailer">Movie Trailer</string>
    <string name="overview">Overview:</string>
    <string name="summary">Adrift in space with no food or water, Tony Stark sends a message to Pepper Potts as his oxygen supply starts to dwindle. Meanwhile, the remaining Avengers — Thor, Black Widow, Captain America and Bruce Banner — must figure out a way to bring back their vanquished allies for an epic showdown with Thanos — the evil demigod who decimated the planet and the universe.\n\n
    Adrift in space with no food or water, Tony Stark sends a message to Pepper Potts as his oxygen supply starts to dwindle. Meanwhile, the remaining Avengers — Thor, Black Widow, Captain America and Bruce Banner — must figure out a way to bring back their vanquished allies for an epic showdown with Thanos — the evil demigod who decimated the planet and the universe.\n\n
    Adrift in space with no food or water, Tony Stark sends a message to Pepper Potts as his oxygen supply starts to dwindle. Meanwhile, the remaining Avengers — Thor, Black Widow, Captain America and Bruce Banner — must figure out a way to bring back their vanquished allies for an epic showdown with Thanos — the evil demigod who decimated the planet and the universe.</string>
</resources>