<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgvWidePoster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/wide_movie_poster"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/wide_poster" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgvPoster"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"
                android:src="@drawable/poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/spacing_normal"
                android:text="@string/title"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgvPoster"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:padding="@dimen/spacing_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgvPoster"
                app:layout_constraintTop_toBottomOf="@+id/txtvTitle">

                <TextView
                    android:id="@+id/txtvRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:fontFamily="sans-serif"
                    android:text="@string/released"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/release_date"
                    android:textColor="#BF000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnTrailer"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-black"
                android:padding="@dimen/spacing_normal"
                android:text="@string/movie_trailer"
                android:textAllCaps="true"
                app:layout_constraintBottom_toTopOf="@+id/txtvOverview"
                app:layout_constraintStart_toEndOf="@+id/imgvPoster"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/txtvOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:fontFamily="sans-serif-black"
                android:padding="@dimen/spacing_normal"
                android:text="@string/overview"
                android:textColor="#BE000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgvPoster" />

            <TextView
                android:id="@+id/txtvSummary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:padding="@dimen/spacing_normal"
                android:text="@string/summary"
                android:textColor="#BE000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtvOverview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>